--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </a-sphere>
     -->
     <a-entity  animation="property: object3D.position.y; to: 2.5; dir: alternate; dur: 1000; loop: true"> 
-      <a-image src="./marker/sakuramochi.png" width="4" height="4" position="0 -0.2 -5"></a-image>
+      <a-image src="./img/sakuramochi.png" width="4" height="4" position="0 -0.2 -5"></a-image>
     </a-entity>
   </a-marker>
 
