--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a-assets>
       <img id="texture" src="./img/sakuramochi.png">
     </a-assets>
-    <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#f00">
+    <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#f00" src="#texture">
       <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
       </a-animation>
     </a-sphere>
