--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
 
   <!-- ③ 作成したマーカーでのソース -->
   <a-marker type='pattern' url='./marker/pattern-sakuramochi.patt'>
-  <!--
     <a-assets>
       <img id="texture" src="img/sakuramochi.png">
     </a-assets>
-    <a-sky src="#texture"></a-sky>
--->
-    <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#f00">
+    <a-sphere scale=".25 .25 .25" position="0 .5 0" src="#texture" color="#f00">
       <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
       </a-animation>
     </a-sphere>
