--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- ③ 作成したマーカーでのソース -->
   <a-marker type='pattern' url='./marker/pattern-sakuramochi.patt'>
     <a-assets>
-      <img id="texture" src="./img/sakuramochi.png">
+      <img id="texture" src="img/sakuramochi.png">
     </a-assets>
     <a-sphere scale=".25 .25 .25" position="0 .5 0" src="#texture" color="#f00">
       <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
