--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
   <!-- ③ 作成したマーカーでのソース -->
   <a-marker type='pattern' url='./marker/pattern-sakuramochi.patt'>
-    <a-assets>
-      <img id="texture" src="/img/sakuramochi.png">
-    </a-assets>
-	  <a-box width="1" height="2" depth="50" position="-1 1.5 -27" src="#texture" repeat="1 1" rotation="0 -2 0" color="#ccc"></a-box>
+    <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#f00">
+      <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
+      </a-animation>
+    </a-sphere>
   </a-marker>
 
 
