--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <a-marker type='pattern' url='./marker/pattern-sakuramochi.patt'>
 
     <a-assets>
-      <img id="boxTexture" src="img/sakuramochi.png">
+      <img id="Texture" src="img/sakuramochi.png">
     </a-assets>
-    <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#f00">
+    <a-sphere src="#Texture" scale=".25 .25 .25" position="0 .5 0" color="#f00">
       <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
       </a-animation>
     </a-sphere>
