--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
   <!-- ③ 作成したマーカーでのソース -->
   <a-marker type='pattern' url='./marker/pattern-sakuramochi.patt'>
 
-    <a-sphere src="img/sakuramochi.png" scale=".25 .25 .25" position="0 .5 0" color="#f00">
-      <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
-      </a-animation>
-    </a-sphere>
+     <a-box position="0 0.5 0" wireframe="true"></a-box>
 
   </a-marker>
 
