--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- ③ 作成したマーカーでのソース -->
   <a-marker type='pattern' url='./marker/pattern-sakuramochi.patt'>
 
-     <a-box position="0 0.5 0" wireframe="true"></a-box>
+     <a-box position="0 0.5 0" src="img/sakuramochi.png"></a-box>
 
   </a-marker>
 
